--- a/main.tex
+++ b/main.tex
@@ -74,7 +74,7 @@
 
 \begin{document}
 
-\title{Instructions for Submission to PLDI'16}
+\title{Natural Program Synthesis from Examples in Haskell}
 
 %
 % any author declaration will be ignored  when using 'pldi' option (for double blind review)
