--- a/intro.tex
+++ b/intro.tex
@@ -8,7 +8,7 @@ The goal of program synthesis is to automatically derive code from a given speci
 The derived code is correct by construction and it should make the programmer more productive.
 However, writing a complete specification of an entire program is often a more complex task than writing the corresponding code, even for very simple programs.
 
-Programming by example~\cite{cypher93,lieberman01,synasc12} is a promising research direction that enables easy manipulation of data even for non-programmers~\cite{GulwaniHS12}. Recent work in this area has focused on manipulating fundamental data types such as strings~\cite{flashFillPOPL,vldb12,icml13}, lists~\cite{FeserCD15,poseraZ15} and numbers~\cite{cav12}. The success and impact of this line of work can be estimated from the fact that some of this technology ships as part of the popular FlashFill feature in Excel 2013~\cite{flashFillPOPL}.
+Programming by example~\cite{cypher93,lieberman01,synasc12} is a promising research direction that enables easy manipulation of data even for non-programmers~\cite{GulwaniHS12}. Recent work in this area has focused on manipulating fundamental data types such as strings~\cite{flashFillPOPL,vldb12,icml13}, lists~\cite{FeserCD15,Osera:2015} and numbers~\cite{cav12}. The success and impact of this line of work can be estimated from the fact that some of this technology ships as part of the popular FlashFill feature in Excel 2013~\cite{flashFillPOPL}.
  
 Instead of writing code, the user provides a list of relevant examples and the synthesis tool automatically generates a program. 
 In this way, the examples can be seen as an easily readable and understandable specification. 
@@ -23,7 +23,7 @@ Our goal is to synthesize code that can be naturally integrated into code writte
 In this paper we introduce an approach called \textit{natural synthesis} that reaches beyond the goal of synthesizing correct code, and synthesizes code from examples that is natural and idiomatic to the language.
 
 Take the simple task of synthesizing a list flattening function from examples. 
-Synthesis approaches that use only the primitive recursive operators~\cite{poseraZ15,FeserCD15}, would find a function similar to \codeinline{solution1} in Listing \ref{natSyn}.
+Synthesis approaches that use only the primitive recursive operators~\cite{Osera:2015,FeserCD15}, would find a function similar to \codeinline{solution1} in Listing \ref{natSyn}.
 Our tool instead focuses on actually utilizing these library functions (solution2).
 
 \begin{lstlisting}[caption=Low-level synthesis vs. Natural synthesis,label=natSyn]
@@ -70,7 +70,7 @@ allow users to focus on the more natural examples.
 In summary, our paper makes the following contributions:
 
 \begin{enumerate}[topsep=0pt]
-\item Adding natural synthesis into a real language (Haskell) to support a programming by example system that generates simple code.
+\item Adding natural synthesis into a real language (Haskell) to support a programming by example system that generates simple and reusable code.
 \item Supporting user defined data types, first order functions, and higher order functions, as well as handling library imports to further support full integration into Haskell.
 \item Automatically inferring refinement types on user defined higher order functions to assist with pruning the search space of synthesis. We use multiple passes of type match ranking algorithm to sort, prune, and when needed expand, the search space.
 \item We present an evaluation of the performance of \ourTool/, as well as showing examples of the code that it can synthesize.
