--- a/intro.tex
+++ b/intro.tex
@@ -48,6 +48,10 @@ In fact, many users write higher order functions first, then combine them in int
 Library authors often provide users with a number of higher order functions to allow users more easily write their applications.
 Since users write higher order functions with a deep understanding of the domain, using them produces code that is more idiomatic and easier to understand then using generic higher order functions.
 
+
+\ruzica{add now here a high level, three sentances describing what do we actually do: talk about two phase synthesis, parsing and using refinement types for pruning search space}
+
+
 \ruzica{this part is poor}
 
 While using concatMap is certainly the most natural solution in Listing \ref{natSyn}, it is not surprising or novel solution. 
