Updates from ShareLaTeX

--- a/eval.tex
+++ b/eval.tex
@@ -22,7 +22,7 @@ In Section \ref{sec:related}, we will discuss why, even if we had completeness, 
   \def\arraystretch{1.1}
   \begin{tabular}{|c|l|c|l|l|l|l|}
     \hline
-    & Name & Time (s) & Imports & \# & Representative Example & Generated Function \\
+    & Name & Time (s) & Imports & \# Ex & Representative Example & Generated Function \\
     \hline
     \parbox[t]{2mm}{\multirow{4}{*}{\rotatebox[origin=c]{90}{Bool}}}
     & and & 2.02 & None & 3 & [True, False] $:\to$ False & all id \\
@@ -57,7 +57,7 @@ In Section \ref{sec:related}, we will discuss why, even if we had completeness, 
     \hline
   \end{tabular}
   \egroup
-  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself.}
+  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself. The group marked ``Tree (u.d.)'' is a user-defined structure with user-defined higher-order operations.}
   \label{tab:benchmarks}
 \end{table*}
 
