--- a/myBib.bib
+++ b/myBib.bib
@@ -36,6 +36,15 @@
   year      = {2012}
 }
 
+@book{Lipovaca:2011,
+ author = {Lipovaca, Miran},
+ title = {Learn You a Haskell for Great Good!: A Beginner's Guide},
+ year = {2011},
+ isbn = {1593272839, 9781593272838},
+ edition = {1st},
+ publisher = {No Starch Press},
+ address = {San Francisco, CA, USA},
+} 
 
 @inproceedings{DBLP:conf/icfp/Bodik15,
   author    = {Rastislav Bod{\'{\i}}k},
