--- a/eval.tex
+++ b/eval.tex
@@ -57,18 +57,19 @@ In Section \ref{sec:related}, we will discuss why, even if we had completeness, 
     \hline
   \end{tabular}
   \egroup
-  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself. The group marked ``Tree (u.d.)'' is a user-defined structure with user-defined higher-order operations.}
+  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself. The group marked ``Tree (u.d.)'' is a user-defined structure with user-defined higher-order operations. All reported data is generated on a Linux machine with a four cores of Intel i5-3450 @ 3.10GHz and 8 Gb of ram.}
   \label{tab:benchmarks}
 \end{table*}
 
-Since the standard library can be considered a relatively stable set of code, we could cache the refinement type inference to reduce the build time.
+In Table \ref{tab:benchmarks} we show detailed information about \ourTool/ over a set of benchmarks. These benchmarks were chosen to show the breadth of applications and queries that \ourTool/ can handle. The benchmarks over Booleans, Trees, and Lists are common to many other programming by example tools. In our synthesis we are able to find natural solution programs in a short amount of time with very few examples.
+
+Part of this performance can be attributed to the ease of parallezation 
 
 In Section \ref{HORtypeInf} we discuss using type matching and the \codeinline{noRType} tag to reduce the number of refinement type inferences we must make. 
 Recall that even if both type have a measure (lists and trees), in general we have no guarantee that this is meaningful comparison.
 Since \lhask/ is the largest cost to our system in the offline stage, removing refinement type inference in these ambiguous cases provides a large performance gain.
 As an example, in processing the Haskell standard library \codeinline{base:Prelude}, there are 7 out of 30 cases of higher order functions that do not need to be checked against refinement types using this approach.
 
-All reported data is generated on a Linux desktop machine with an Intel i5-3450 @ 3.10GHz and 8 Gb of ram
 
 \subsection{Example Generation}\label{languageSupport}
 
