Updates from ShareLaTeX

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,6 @@
 \section{Conclusions}
 \label{conclusions}
 
-Even for novice users, basic programming skills are becoming more commonplace, and synthesis tools must be able to provide users access to code.
+Even for novice users, basic programming skills are becoming more commonplace, and synthesis tools must be able to provide users access to useful code. 
+Program synthesis is a powerful tool, but as long as this power is locked away in level upon level of folds, filters, and maps, most users will not be able to take full advantage of this field. 
+Program synthesis has been able to make correct functions, now it is time for it to make an impact.
