--- a/eval.tex
+++ b/eval.tex
@@ -57,18 +57,15 @@ In Section \ref{sec:related}, we will discuss why, even if we had completeness, 
     \hline
   \end{tabular}
   \egroup
-  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself. The group marked ``Tree (u.d.)'' is a user-defined structure with user-defined higher-order operations. All reported data is generated on a Linux machine with a four cores of Intel i5-3450 @ 3.10GHz and 8 Gb of ram.}
+  \caption{Benchmarks and Performance Measures. This table lists all 20 benchmarks, grouped by data structure. Each benchmark lists its name, the amount of time it took to synthesize, the extra imports it uses, the number of examples needed to synthesize, one representative example, and the synthesized function itself. The group marked ``Tree (u.d.)'' is a user-defined structure with user-defined higher-order operations. All reported data is generated on a Linux machine with four cores of Intel i5-3450 @ 3.10GHz and 8 Gb of ram.}
   \label{tab:benchmarks}
 \end{table*}
 
-In Table \ref{tab:benchmarks} we show detailed information about \ourTool/ over a set of benchmarks. These benchmarks were chosen to show the breadth of applications and queries that \ourTool/ can handle. The benchmarks over Booleans, Trees, and Lists are common to many other programming by example tools. In our synthesis we are able to find natural solution programs in a short amount of time with very few examples.
+In Table \ref{tab:benchmarks} we show detailed information about \ourTool/ over a set of benchmarks. These benchmarks were chosen to show the versatility of \ourTool/ over many different applications and libraries. The benchmarks over booleans, trees, and lists are common to many other programming-by-example tools. The examples that utilize the \codeinline{Data.List} and \codeinline{Euterpea} libraries to show \ourTool/'s ability to work with large, highly specialized, 3rd-party libraries. Due to the algorithm's focus on generating natural code, the synthesized functions are concise enough to be listed within the table itself. The representative examples show that few, simple hints to the synthesizer are able to produce good results. In many cases, the representative examples are actually the \textit{only} examples necessary to synthesize the desired function. This shows that our approach uses the information available to it effectively.
 
-Part of this performance can be attributed to the ease of parallezation 
+In addition, the runtime average about ten seconds thanks to the inherently parallel nature of the search. With just a few lines of code, we were able to achieve order-of-magnitude speedups over the serial version. Haskell's functional parallelism model is ideal for embarrassingly parallel problems like this one, and promises good scaling to larger instances of the problem over increasing computational resources.
 
-In Section \ref{HORtypeInf} we discuss using type matching and the \codeinline{noRType} tag to reduce the number of refinement type inferences we must make. 
-Recall that even if both type have a measure (lists and trees), in general we have no guarantee that this is meaningful comparison.
-Since \lhask/ is the largest cost to our system in the offline stage, removing refinement type inference in these ambiguous cases provides a large performance gain.
-As an example, in processing the Haskell standard library \codeinline{base:Prelude}, there are 7 out of 30 cases of higher order functions that do not need to be checked against refinement types using this approach.
+In Section \ref{HORtypeInf} we discuss using type matching and the \codeinline{noRType} tag to reduce the number of refinement type inferences we must make. Recall that even if both types have a measure (lists and trees), in general we have no guarantee that this is meaningful comparison. Since \lhask/ is the largest cost to our system in the offline stage, removing refinement type inference in these ambiguous cases provides a large performance gain. As an example, in processing the Haskell standard library \codeinline{base:Prelude}, there are 7 out of 30 cases of higher order functions that do not need to be checked against refinement types using this approach.
 
 
 \subsection{Example Generation}\label{languageSupport}
