--- a/examples.tex
+++ b/examples.tex
@@ -13,7 +13,7 @@ exs :: [[Int] :-> [Int]]
 exs = [[1, 2, 3] :-> [1, 1, 2, 2, 3, 3]]
 \end{lstlisting}
 
-If, in addition, the user develops a function \codeinline{dupl} which duplicates an element (see below), then \ourTool/ will provide the solution \codeinline{concatMap dupl}, as well as the solution listed above.
+If, in addition, the user develops a function \codeinline{dupl} which duplicates an element (see below), then \ourTool/ will provide the solution \codeinline{concatMap dupl}, as well as the solution listed above. \ourTool/ will report the solution program that contains user defined functions before finding others, by using a ranking algorithm. Ranks are calculated throughout algorithm, continually being updated as we derive new information.
 
 \begin{lstlisting}
 dupl :: a -> [a]
