Updates from ShareLaTeX

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,7 @@
 \section{Conclusions}
 \label{conclusions}
+Even for novice computer users, the need for basic programming skills is increasing. To meet this need, synthesis tools must be able to produce code that is not only correct, but also useful to the users of these tools.
 
-Even for novice users, basic programming skills are becoming more commonplace, and synthesis tools must be able to provide users access to useful code. 
-Program synthesis is a powerful tool, but as long as this power is locked away in level upon level of folds, filters, and maps, most users will not be able to take full advantage of this field. 
+Program synthesis is powerful, but as long as this power is obfuscated level upon level of folds, filters, and maps, most users will not be able to take full advantage of this field. 
+
 Program synthesis has been able to make correct functions, now it is time for it to make an impact.
