--- a/eval.tex
+++ b/eval.tex
@@ -65,7 +65,7 @@ In Table \ref{tab:benchmarks} we show detailed information about \ourTool/ over 
 
 In addition, the runtime average about ten seconds thanks to the inherently parallel nature of the search. With just a few lines of code, we were able to achieve order-of-magnitude speedups over the serial version. Haskell's functional parallelism model is ideal for embarrassingly parallel problems like this one, and promises good scaling to larger instances of the problem over increasing computational resources.
 
-In Section \ref{HORtypeInf} we discuss using type matching and the \codeinline{noRType} tag to reduce the number of refinement type inferences we must make. Recall that even if both types have a measure (lists and trees), in general we have no guarantee that this is meaningful comparison. Since \lhask/ is the largest cost to our system in the offline stage, removing refinement type inference in these ambiguous cases provides a large performance gain. As an example, in processing the Haskell standard library \codeinline{base:Prelude}, there are 7 out of 30 cases of higher order functions that do not need to be checked against refinement types using this approach.
+In Section \ref{HORtypeInf} we discuss how type matching and the \codeinline{noRType} tag reduce the number of refinement type inferences we make. Recall that even if both types have a measure (lists and trees), in general there is no guarantee that this is a meaningful comparison. Since \lhask/ is the largest cost to our system in the offline stage, removing refinement type inference in these ambiguous cases provides a large performance gain. As an example, in processing the Haskell standard library \codeinline{base:Prelude}, 7 out of 30 higher order functions do not need to be checked against refinement types using this approach.
 
 
 \subsection{Example Generation}\label{languageSupport}
